--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
     <div class="row">
       <div class="col-xs-12 col-sm-offset-1 col-sm-10">
-        <p class="description">If you ever wanted to share your account to a site for a limited amount of time<br/>but couldn't find a good way to do it without giving away personal information, <b>ShareAccount</b> is for you</p>
+        <p class="description">If you ever wanted to share your account to a site for a limited amount of time<br class="hidden-xs" />but couldn't find a good way to do it without giving away personal information, <b>ShareAccount</b> is for you</p>
       </div>
     </div>
 
     <div class="row">
       <div class="col-xs-12 text-center">
-        <a href="https://chrome.google.com/webstore/detail/glifngepkcmfolnojchcfiinmjgeablm" class="js-install-button button button-primary install-button">INSTALL</a>
+        <a href="https://chrome.google.com/webstore/detail/glifngepkcmfolnojchcfiinmjgeablm" class="js-install-button button install-button">INSTALL</a>
         <a href="https://github.com/NicoSantangelo/shareaccount" class="view-on-github" target="_blank">view on GitHub</a>
       </div>
     </div>
@@ -45,15 +45,15 @@
   <section class="container-fluid graph-section">
     <div class="row">
       <div class="col-xs-12">
-        <h2 class="section-title">How it works</h2>
+        <h2 class="step-title section-title">How it works</h2>
       </div>
     </div>
 
-    <div class="row step">
-      <div class="col-sm-offset-1 col-sm-5">
+    <div class="row flex-center step">
+      <div class="col-xs-12 col-sm-offset-1 col-sm-5">
         <img src="images/graph-step-1.png" class="img-responsive" alt="First step" width="360">
       </div>
-      <div class="col-sm-5">
+      <div class="col-xs-12 col-sm-5">
         <p class="step-explanation">
           Find a friend you want to share an account with.<br />
           Make sure both of you have <b>ShareAccount</b> installed.<br />
@@ -62,41 +62,40 @@
       </div>
     </div>
 
-    <div class="row step">
-      <div class="col-sm-offset-1 col-sm-5">
+    <div class="row flex-center step">
+      <div class="col-xs-12 col-sm-offset-1 col-sm-5">
         <img src="images/graph-step-2.png" class="img-responsive" alt="Second step" width="360">
       </div>
-      <div class="col-sm-5">
+      <div class="col-xs-12 col-sm-5">
         <p class="step-explanation">
-          Ask the recipient for their code (found on <i>USE ACCOUNT</i>)<br />
-          Press <i>SHARE ACCOUNT</i> and enter the code<br />
-          Press <i>SHARE</i> and copy the result.
+          Ask the recipient for their code (found on <i>RECEIVE ACCOUNT</i>)<br />
+          Press <i>SHARE ACCOUNT</i> and enter the code.<br />
+          Press <i>SHARE</i>, copy the result and give it to the recipient.
         </p>
       </div>
     </div>
 
-    <div class="row step">
-      <div class="col-sm-offset-1 col-sm-5">
+    <div class="row flex-center step">
+      <div class="col-xs-12 col-sm-offset-1 col-sm-5">
         <img src="images/graph-step-3.png" class="img-responsive" alt="Last step" width="360">
       </div>
-      <div class="col-sm-5">
+      <div class="col-xs-12 col-sm-5">
         <p class="step-explanation">
-          Who only has to add it in the textbox of<br />
-          the <i>USE ACCOUNT</i> and press <i>RESTORE</i>
+          The recipient, still on the <i>RECEIVE ACCOUNT</i> menu pastes the text on the <i>Share result</i> textbox<br />
+          He/She presses the <i>RECEIVE</i> button, and that's it!
         </p>
       </div>
     </div>
   </section>
 
-  <section class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="install-container">
-          <a href="https://chrome.google.com/webstore/detail/glifngepkcmfolnojchcfiinmjgeablm" class="js-install-button button button-primary install-button">INSTALL</a>
-          <div class="extra-info">
-            <a href="https://github.com/NicoSantangelo/shareaccount">More info</a>
-          </div>
-        </div>
+  <section class="container-fluid get-it-section">
+    <div class="row flex-center">
+      <div class="col-xs-12 col-sm-offset-1 col-sm-6">
+        <h2 class="get-it-title section-title">Get it now</h2>
+        <p class="get-it-section-subtitle">And stop having to worry about giving away your password</p>
+      </div>
+      <div class="col-xs-12 col-sm-4 text-center">
+        <a href="https://chrome.google.com/webstore/detail/glifngepkcmfolnojchcfiinmjgeablm" class="js-install-button button install-button">GET IT</a>
       </div>
     </div>
   </section>
