--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="col-xs-12 col-sm-5">
         <p class="step-explanation">
           Ask the recipient for their code (found on <i>RECEIVE ACCOUNT</i>)<br />
-          Press <i>SHARE ACCOUNT</i> and enter the code.<br />
+          Press <i>SHARE ACCOUNT</i> and enter the code with an optional timeout.<br />
           Press <i>SHARE</i>, copy the result and give it to the recipient.
         </p>
       </div>
