Mini-update the site desc

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>ShareAccount</title>
 
-  <meta name="description" content="Chrome Extension to share your account session without giving out your password.">
+  <meta name="description" content="Chrome Extension to share your account without giving out your password.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="shortcut icon" href="favicon.ico" />
