Some more mini-wording fixes

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
       <div class="col-xs-12 col-sm-5">
         <p class="step-explanation">
-          The recipient, still on the <i>RECEIVE ACCOUNT</i> menu pastes the text on the <i>Share result</i> textbox<br />
+          The recipient, still on the <i>RECEIVE ACCOUNT</i>, menu pastes the text on the <i>Share result</i> textbox<br />
           He/She presses the <i>RECEIVE</i> button, and that's it!
         </p>
       </div>
