Social Meta tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <meta name="description" content="Chrome Extension to share your account without giving out your password.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <meta property="og:title" content="ShareAccount Chrome Extension"/>
+  <meta property="og:description" content="An open source chrome extension which shares your current session. It uses cryptography to ensure that only the recipient can decode the result. There are no servers involved" />
+  <meta property="og:url" content="https://shareaccount.nicosantangelo.com"/>
+  <meta property="og:site_name" content="ShareAccount"/>
+  <meta property="og:image" content="https://shareaccount.nicosantangelo.com/images/social-logo.png"/>
+
+  <meta name="twitter:title" content="ShareAccount Chrome Extension">
+  <meta name="twitter:description" content="An open source chrome extension which shares your current session. It uses cryptography to ensure that only the recipient can decode the result. There are no servers involved">
+  <meta name="twitter:card" value="Chrome Extension to share your account without giving out your password">
+  <meta name="twitter:image" content="https://shareaccount.nicosantangelo.com/images/social-logo.png">
+
   <link rel="shortcut icon" href="favicon.ico" />
   <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/glifngepkcmfolnojchcfiinmjgeablm">
 
