--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="ShareAccount Chrome Extension"/>
+  <meta property="og:type" content="website" />
   <meta property="og:description" content="An open source chrome extension which shares your current session. It uses cryptography to ensure that only the recipient can decode the result. There are no servers involved" />
   <meta property="og:url" content="https://shareaccount.nicosantangelo.com"/>
   <meta property="og:site_name" content="ShareAccount"/>
