--- a/popup/index.html
+++ b/popup/index.html
@@ -41,7 +41,7 @@
           <div class="small">Timeout in hours <span class="link" data-balloon="Explanation." data-balloon-length="medium" data-balloon-pos="right">?</span></div>
 
           <div class="input-container timeout-container">
-            <input type="number" name="timeout" value="" min="1" placeholder="It'll last a week by deafult." autocomplete="off" />
+            <input type="number" name="timeout" value="" min="1" placeholder="It'll last a week by default." autocomplete="off" />
             <div id="js-expires-on" class="expires-on"></div>
           </div>
 
